# agama-protocol-looping

./: .env.example  .gitignore  OPS_RUNBOOK.md  V3_ARCHITECTURE_REPORT.md  foundry.toml
deployments/: .7295799.pre-cooldown-1777763116.json.bak  .7295799.pre-redeploy-1777377951.json.bak  .7295799.tranches.pre-cooldown-1777763116.json.bak  .7295799.tranches.pre-redeploy-1777377951.json.bak  7295799.json  7295799.tranches.json
keeper/: package.json
keeper/src/: index.mjs  timeboost.mjs
script/: DemoSetup.s.sol  Deploy.s.sol  DeployTranches.s.sol  RedeployCollectors.s.sol  check-verify.sh  e2e-multi-actor.sh  e2e-multitranche.sh  e2e-v2.sh  e2e-v3.sh  verify-all.sh
script/stress-live/: 00-setup-wallets.sh  01-cat1-lending.sh  02-cat2-borrowing.sh  03-cat3-repay.sh  04-cat4-liquidations.sh  05-cat7-oracle-flash.sh  06-cat5-sp-stake.sh  99-finalize-report.sh  _lib.sh  agyld-sagyld-stress.sh  big-borrow.sh  cooldown-5min-demo.sh  cooldown-e2e.sh  dust-exploit-must-fail.sh  flash-crash-e2e.sh  full-e2e.sh  full-flow-stress.sh  keys.env  multi-actor-continue.sh  (+12 more)
soroban/: .gitignore  Cargo.toml
stress-test-results/: V2-cooldown-report.md  v3-final-state-20260503T192556Z.txt  v3-multi-market-live-20260503T193854Z.txt
stylus/: .gitignore  Cargo.toml  README.md
stylus/crates/agusd/: Cargo.toml
stylus/crates/agusd/src/: lib.rs  main.rs
stylus/crates/lending-pool/: Cargo.toml
stylus/crates/lending-pool/src/: lib.rs  main.rs  shared.rs
stylus/crates/mock-usdc/: Cargo.toml
stylus/crates/mock-usdc/src/: lib.rs  main.rs
stylus/crates/nav-oracle/: Cargo.toml
stylus/crates/nav-oracle/src/: lib.rs  main.rs
stylus/crates/rwa-vault/: Cargo.toml  rust-toolchain.toml
stylus/crates/rwa-vault/src/: lib.rs  main.rs
stylus/crates/sagusd/: Cargo.toml
stylus/crates/sagusd/src/: lib.rs  main.rs
stylus/crates/shared/: Cargo.toml
stylus/crates/shared/src/: lib.rs
stylus/deployments/: arbitrum-sepolia.json
stylus/scripts/: e2e.sh  e2e2.sh  new-addrs.env  verify-all.sh  wire.sh  wire2.sh
(+81 files in other folders)
