[package]
name = "agusd"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "agusd"

# Standalone crate (own workspace) for reproducible `cargo stylus verify`.
[workspace]

[dependencies]
alloy-primitives = "1.5.7"
alloy-sol-types = "1.5.7"
stylus-sdk = "0.10.7"

[dev-dependencies]
stylus-sdk = { version = "0.10.7", features = ["stylus-test"] }

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3
